cabal-version:       >=1.10

name:                celestial
version:             0.1.0.0
synopsis:            Compute expressions which have been proven in source.
description:         Celestial is a math engine which provides proofs of every
                     type of computations it is doing in the source.
bug-reports:         https://github.com/fivegrant/celestial/issues
license:             GPL
license-file:        LICENSE
author:              Five Grant (5@fivegrant.com)
maintainer:          Five Grant (5@fivegrant.com)
copyright:           Copyright 2020, Five Grant, All rights reserved.
category:            Mathematics
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable celestial
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  -- hs-source-dirs:
  default-language:    Haskell2010
